InsuranceOrg/force-app/main/default/objects/vlocity_ins__TemplateDesignerConfiguration__c/vlocity_ins__TemplateDesignerConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Template designer configuration settings</description>
    <label>Template Designer Configuration</label>
</CustomObject>