InsuranceOrg/force-app/main/default/objects/vlocity_ins__TemplateDesignerConfiguration__c/fields/vlocity_ins__AutoSave__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AutoSave__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable template designer autoSave.</description>
    <inlineHelpText>Enable template designer autoSave.</inlineHelpText>
    <label>Auto Save</label>
    <type>Checkbox</type>
</CustomField>